src/yini_test/cases/golden/strict/valid/sections/section-alternate-marker-less-than.strict.yini
@yini strict

< Config
name = "strict-alternate-marker-less-than"
enabled = true

/END
