src/yini_test/cases/golden/strict/invalid/parser-mode/yini-unknown-in-strict-mode.yini
@yini relaxed

^ App
name = "yini-unknown-in-strict-mode"
mode = "strict"
enabled = true

/END
